--- a/app/assets/stylesheets/speakers.scss
+++ b/app/assets/stylesheets/speakers.scss
@@ -3,7 +3,7 @@
   color: white;
   padding-top: 10px;
   padding-bottom: 100px;
-  background: url('dark_geometric.png');
+  background: url('sky-night-space-trees.jpg');
   // background-size: cover;
 }
 
