--- a/app/views/partials/_schedule.html.erb
+++ b/app/views/partials/_schedule.html.erb
@@ -4,7 +4,7 @@
 		<article>
 			<div class="inner">
 				<span class="timing">
-					<span class="dots"><img id="tmb" src="/assets/ephrem_tn.jpg"></span>
+					<span class="dots"><%= image_tag("ephrem.jpg", :class => "profile-pic", :id => "tmb") %></span>
 				</span>
 					<h2 class="dropProfile1">9.00 am - Ephrem Akele</h2>
 					<p class="dropContent1">Security Concerns of a Front-End Framework - where Ephrem will speak about the dangers of poor implementation using real world examples.</p>
