--- a/app/views/partials/_schedule.html.erb
+++ b/app/views/partials/_schedule.html.erb
@@ -13,7 +13,8 @@
 		<article>
 			<div class="inner">
 				<span class="timing">
-					<span class="dots"><img id="tmb" src="/assets/stephen_tn.jpg"></span>
+					<span class="dots"><%= image_tag("stephen.jpg", :class => "profile-pic", :id => "tmb") %>
+</span>
 				</span>
 			</span>
 				<h2 class="dropProfile2">9.45 am - Stephen Khoo</h2>
@@ -23,7 +24,8 @@
 	<article>
 		<div class="inner">
 			<span class="timing">
-				<span class="dots"><img id="tmb" src="/assets/mtea.jpg"></span>
+				<span class="dots"><%= image_tag("mtea.jpg", :class => "profile-pic", :id => "tmb") %>
+</span>
 			</span>
 		</span>
 			<h2 class="dropProfile3">10.30 am Morning Tea</h2>
@@ -33,7 +35,7 @@
 <article>
 	<div class="inner">
 		<span class="timing">
-			<span class="dots"><img id="tmb" src="/assets/yogi_tn.jpg"></span>
+			<span class="dots"><%= image_tag("yogi.jpg", :class => "profile-pic", :id => "tmb") %></span>
 		</span>
 	</span>
 		<h2 class="dropProfile4">11.00 am - Yogi</h2>
@@ -43,7 +45,7 @@
 <article>
 <div class="inner">
 	<span class="timing">
-		<span class="dots"><img id="tmb" src="/assets/luke_tn.jpg"></span>
+		<span class="dots"><%= image_tag("luke.jpg", :class => "profile-pic", :id => "tmb") %></span>
 	</span>
 </span>
 	<h2 class="dropProfile5">11.45 am - Luke Phelan</h2>
@@ -53,7 +55,7 @@
 <article>
 <div class="inner">
 <span class="timing">
-	<span class="dots"><img id="tmb" src="/assets/lunch_tn.jpg"></span>
+	<span class="dots"><%= image_tag("lunch.jpg", :class => "profile-pic", :id => "tmb") %></span>
 </span>
 </span>
 <h2 class="dropProfile6">12.30 am - Lunch</h2>
@@ -63,7 +65,7 @@
 <article>
 <div class="inner">
 <span class="timing">
-<span class="dots"><img id="tmb" src="/assets/brad_tn.jpg"></span>
+<span class="dots"><%= image_tag("brad.jpg", :class => "profile-pic", :id => "tmb") %></span>
 </span>
 </span>
 <h2 class="dropProfile7">1.00 pm - Brad Wynter</h2>
@@ -73,7 +75,7 @@
 <article>
 <div class="inner">
 <span class="timing">
-<span class="dots"><img id="tmb" src="/assets/yang_tn.jpg"></span>
+<span class="dots"><%= image_tag("yang.jpg", :class => "profile-pic", :id => "tmb") %></span>
 </span>
 </span>
 <h2 class="dropProfile8">1.45 pm - Yang Li</h2>
@@ -83,7 +85,7 @@
 <article>
 <div class="inner">
 <span class="timing">
-<span class="dots"><img id="tmb" src="/assets/mark_tn.jpg"></span>
+<span class="dots"><%= image_tag("mark.jpg", :class => "profile-pic", :id => "tmb") %></span>
 </span>
 </span>
 <div class="dropProfile9">
@@ -97,7 +99,7 @@
 <article>
 <div class="inner">
 <span class="timing">
-<span class="dots"><img id="tmb" src="/assets/atea.jpg"></span>
+<span class="dots"><%= image_tag("atea.jpg", :class => "profile-pic", :id => "tmb") %></span>
 </span>
 </span>
 <div class="dropProfile10">
@@ -111,7 +113,7 @@
 <article>
 <div class="inner">
 <span class="timing">
-<span class="dots"><img id="tmb" src="/assets/thomas_tn.jpg"></span>
+<span class="dots"><%= image_tag("thomas.jpg", :class => "profile-pic", :id => "tmb") %></span>
 </span>
 </span>
 <div class="dropProfile11">
@@ -125,7 +127,7 @@
 <article>
 <div class="inner">
 <span class="timing">
-<span class="dots"><img id="tmb" src="/assets/niall_tn.jpg"></span>
+<span class="dots"><%= image_tag("niall.jpg", :class => "profile-pic", :id => "tmb") %></span>
 </span>
 </span>
 <div class="dropProfile12">
@@ -139,7 +141,7 @@
 <article>
 <div class="inner">
 <span class="timing">
-<span class="dots"><img id="tmb" src="/assets/drinks.jpg"></span>
+<span class="dots"><%= image_tag("drinks.jpg", :class => "profile-pic", :id => "tmb") %></span>
 </span>
 </span>
 <div class="dropProfile13">
