--- a/app/views/partials/_schedule.html.erb
+++ b/app/views/partials/_schedule.html.erb
@@ -55,7 +55,7 @@
 <article>
 <div class="inner">
 <span class="timing">
-	<span class="dots"><%= image_tag("lunch.jpg", :class => "profile-pic", :id => "tmb") %></span>
+	<span class="dots"><%= image_tag("lunch_tn.jpg", :class => "profile-pic", :id => "tmb") %></span>
 </span>
 </span>
 <h2 class="dropProfile6">12.30 am - Lunch</h2>
